--- a/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
@@ -57,7 +57,7 @@
                    HeightRequest="38"/>
 
             <flv:FlowListView x:Name="flowListView" FlowItemTappedCommand="{Binding NewsCommand}" FlowColumnCount="1" SeparatorVisibility="Default" HasUnevenRows="True" SeparatorColor="Black"
-			   FlowItemsSource="{Binding NewsList}" VerticalOptions="Start">
+			   FlowItemsSource="{Binding NewsList}" VerticalOptions="StartAndExpand">
                 <flv:FlowListView.FlowColumnTemplate>
                     <DataTemplate>
                         <StackLayout Spacing="0" VerticalOptions="Start">
