--- a/FodboldApp/FodboldApp/FodboldApp/View/PlayerDescription.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/PlayerDescription.xaml
@@ -4,14 +4,15 @@
              xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
              x:Class="FodboldApp.View.PlayerDescription">
     <ContentPage.Content>
-        <StackLayout Padding="0, 0, 0, 0"
+        <ScrollView>
+            <StackLayout Padding="0, 0, 0, 0"
                          Margin="0, 0, 0, 0"
                          Spacing="0"
                          HorizontalOptions="FillAndExpand">
-            <!--<StackLayout.BindingContext>
+                <!--<StackLayout.BindingContext>
                 <viewmodels:/>
             </StackLayout.BindingContext>-->
-            <Label Text="{Binding Name}"
+                <Label Text="{Binding Name}"
                        TextColor="{StaticResource textColor}"
                        FontSize="32"
                        HorizontalOptions="FillAndExpand"
@@ -19,30 +20,30 @@
                        HorizontalTextAlignment="Center"
                        VerticalTextAlignment="Center"
                        HeightRequest="60"/>
-            <Grid HorizontalOptions="FillAndExpand" ColumnSpacing="0" RowSpacing="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="5*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Image Source="{Binding ImageURL}" AnchorX="0" Aspect="AspectFill" VerticalOptions="FillAndExpand" Grid.Column="0" Grid.Row="0"/>
-                <Grid x:Name="statGrid" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" ColumnSpacing="0" RowSpacing="0" Grid.Column="1" Grid.Row="0">
+                <Grid HorizontalOptions="FillAndExpand" ColumnSpacing="0" RowSpacing="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="4*"/>
+                        <ColumnDefinition Width="5*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Image Source="{Binding ImageURL}" AnchorX="0" Aspect="AspectFill" VerticalOptions="FillAndExpand" Grid.Column="0" Grid.Row="0"/>
+                    <Grid x:Name="statGrid" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" ColumnSpacing="0" RowSpacing="0" Grid.Column="1" Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="5"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                    </Grid>
+                </Grid>
+                <Grid x:Name="descriptionGrid" ColumnSpacing="0" RowSpacing="0" VerticalOptions="FillAndExpand">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="5"/>
                         <ColumnDefinition/>
+                        <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
                 </Grid>
-            </Grid>
-            <Grid x:Name="descriptionGrid" ColumnSpacing="0" RowSpacing="0" VerticalOptions="FillAndExpand">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5"/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="5"/>
-                </Grid.ColumnDefinitions>
-            </Grid>
-            <Label Text="BESKRIVELSE"
+                <Label Text="BESKRIVELSE"
                        TextColor="{StaticResource textColor}"
                        FontSize="24"
                        HeightRequest="46"
@@ -50,24 +51,25 @@
                        VerticalTextAlignment="Center"
                        HorizontalTextAlignment="Center"
                        BackgroundColor="#ffffff"/>
-            <Grid ColumnSpacing="0" RowSpacing="0" HorizontalOptions="FillAndExpand">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5"/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="5"/>
-                </Grid.ColumnDefinitions>
-                <Label HorizontalOptions="FillAndExpand"
+                <Grid ColumnSpacing="0" RowSpacing="0" HorizontalOptions="FillAndExpand">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5"/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="5"/>
+                    </Grid.ColumnDefinitions>
+                    <Label HorizontalOptions="FillAndExpand"
                            BackgroundColor="#f0f0f0"
                            Grid.Column="0"/>
-                <Label Text="{Binding Description}"
+                    <Label Text="{Binding Description}"
                        TextColor="{StaticResource textColor}"
                        HorizontalOptions="FillAndExpand"
                        BackgroundColor="#f0f0f0"
                            Grid.Column="1"/>
-                <Label HorizontalOptions="FillAndExpand"
+                    <Label HorizontalOptions="FillAndExpand"
                            BackgroundColor="#f0f0f0"
                            Grid.Column="2"/>
-            </Grid>
-        </StackLayout>
+                </Grid>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
