MatchHeader inserted in News

--- a/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
@@ -14,7 +14,7 @@
                 <viewmodels:MatchesVM/>
             </StackLayout.BindingContext>-->
 
-            <usercontrols:MatchHeaderUC BindingContext="{x:Static viewmodels:ViewModelLocator.MatchHeaderVM}"/>
+            <usercontrols:MatchHeaderUC/>
 
                 <Label Text="SENESTE RESULTATER"
                    TextColor="{StaticResource textColor}"
